2004-03-31 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b7

        * Bugfix: Added missing quotes around a defined check.

	* Change: Replaced all error_format() with gallery_error().
		  Added echo to all former gallery_error();

	* Change: Little Changes for phpBB2. No major changes.

        * Change: Trivial add of Mambo to list of Environments in Config Wizard.

	* Change: removed unused center() function.

2004-03-31  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b6

	* Change:  Merge jenst's Mambo text fix forward from RC1.

2004-03-30  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b5

	* Fix: Check for validity of $rotate before referencing

2004-03-30  Christian Mohn <ch-moh@online.no> 1.4.4-cvs-b4

        * Fix: Removed max_file_size limit for form data in add_form.inc

2004-03-30  Don Willingham <donwillingham@users.sf.net> 1.4.4-cvs-b3

	* Change: Warn user if watermarking binaries are missing.
	  pnmcomp for NetPBM, composite for ImageMagick

2004-03-29  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b2

	* Change:  Fix setup/backup_albums.php - a <?php was removed
	  from the top of the file.

	* Fix build revision from Beckett's last checkin.  This is now 1.4.4.

2004-03-28  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.4-cvs-b1

	* Parse error typo fix in util.php from 1.4.3-cvs-b150

	* Fix in tools/build_manifest.php for broken GALLERY_BASEDIR change

2004-03-28 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b150

	* Bugfix: Closed an unclosed Table Tag.
		  (Caught by Jade)

2004-03-27 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b149

	* Bugfix: Fixed a place where $GALLERY_BASEDIR was used, but undefined.
	  	  (Caught by Christian Mohn)

2004-03-27 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b148

	* Change: Added  possbility to watermark subalbums

	* Change: removed some warnings.

2004-03-25  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b147

	* Added config files that allow the applet behavior to be configured