@@ -311,7 +311,7 @@ A:hover	{ color: #C0C0C0; }
 	  line-height:140%;
 	  padding:2px;
 	  border:0px dashed #404040;
-	  width=100%   
+	  width:100%   
 	}
 .modfooter a,
 .modfooter a:link,
