@@ -302,7 +302,7 @@ A:hover	{ color: #202020; }
 	  line-height:140%;
 	  padding:2px;
 	  border:0px dashed #404040;
-	  width=100%   
+	  width:100%   
 	}
 .modfooter a,
 .modfooter a:link,
