@@ -1,3 +1,7 @@
+2004-03-31  Jay Rossiter <cryptographite@users.sf.net> 1.4.4-cvs-b8
+
+	* Change: Replace = with : in embedded_style.css for *all* skins
+
 2004-03-31 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b7
 
         * Bugfix: Added missing quotes around a defined check.
